tests/specs/ecosystem/lowlighter/xml/3_0_0.test
lowlighter/xml/3.0.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.223.0": "jsr:@std/assert@0.223.0",
      "jsr:@std/bytes@^0.223.0": "jsr:@std/bytes@0.223.0",
      "jsr:@std/io@^0.223.0": "jsr:@std/io@0.223.0"
    },
    "jsr": {
      "@std/assert@0.223.0": {
        "integrity": "eb8d6d879d76e1cc431205bd346ed4d88dc051c6366365b1af47034b0670be24"
      },
      "@std/bytes@0.223.0": {
        "integrity": "84b75052cd8680942c397c2631318772b295019098f40aac5c36cead4cba51a8"
      },
      "@std/io@0.223.0": {
        "integrity": "2d8c3c2ab3a515619b90da2c6ff5ea7b75a94383259ef4d02116b228393f84f1",
        "dependencies": [
          "jsr:@std/assert@^0.223.0",
          "jsr:@std/bytes@^0.223.0"
        ]
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2694 [ERROR]: Namespace 'Deno' has no exported member 'SeekerSync'.
/** Flux */ export type Flux = ReaderSync & Deno.SeekerSync;
                                                 ~~~~~~~~~~
    at file://<tmpdir>/utils/types.ts:3:50

error: Type checking failed.

